          invocation (no known manifestations of this bug in the field, see
          commit message for description of exact failure scenario)
        - Fix corner case of stringify-only overloaded objects being used in
          create()/populate()
        - Remove spurious exception warping in ::Replicated::execute_reliably
          (RT#113339)
        - Fix spurious ROLLBACK statements when a TxnScopeGuard fails a commit
          of a transaction with deferred FK checks: a guard is now inactivated
          immediately before the commit is attempted (RT#107159)
        - Work around unreliable $sth->finish() on INSERT ... RETURNING within
          DBD::Firebird on some compiler/driver combinations (RT#110979)
        - Really fix savepoint rollbacks on older DBD::SQLite (fix in 0.082800
          was not sufficient to cover up RT#67843)
        - Fix several corner cases with Many2Many over custom relationships
        - Fix the Sybase ASE storage incorrectly attempting to retrieve an
          autoinc value when inserting rows containing blobs (GH#82)

    * Misc
        - Fix invalid variable names in ResultSource::View examples
        - Typo fixes from downstream debian packagers (RT#112007)
        - Skip tests in a way more intelligent and speedy manner when optional
          dependencies are missing
        - Make the Optional::Dependencies error messages cpanm-friendly
        - Incompatibly change values (not keys) of the hash returned by
          Optional::Dependencies::req_group_list (no known users in the wild)
        - Protect tests and codebase from incomplete caller() overrides, like
          e.g. RT#32640
        - Stop using bare $] throughout - protects the codebase from issues
          similar (but likely not limited to) P5#72210
        - Config::Any is no longer a core dep, but instead is migrated to a new
          optdep group 'config_file_reader'

0.082821 2016-02-11 17:58 (UTC)
    * Fixes