@@ -162,6 +162,7 @@ Peter Valdemar Mørch <peter@morch.com>
 peter: Peter Collingbourne <peter@pcc.me.uk>
 phaylon: Robert Sedlacek <phaylon@dunkelheit.at>
 plu: Johannes Plunien <plu@cpan.org>
+pmooney: Paul Mooney <paul.mooney@net-a-porter.com>
 Possum: Daniel LeWarne <possum@cpan.org>
 pplu: Jose Luis Martinez <jlmartinez@capside.com>
 quicksilver: Jules Bean <jules@jellybean.co.uk>
